<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingBottom="20dp"
    tools:context="develop.maikeajuda.View.LoginActivity">

    <ImageView android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:contentDescription="@string/contentDescription_logo"
        android:layout_marginBottom="15dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/img_logo" />


    <EditText android:id="@+id/editText_email"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorSecondaryText"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <EditText android:id="@+id/editText_password"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorSecondaryText"
        android:hint="@string/hint_passwd"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/rounded_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_signIn"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_new_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/register_link"
        android:textAlignment="center"
        android:textSize="12sp" />

</LinearLayout>
